responseentity and logger implemented

--- a/Ecom_App/src/main/resources/application.properties
+++ b/Ecom_App/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=Ecom_App
 spring.data.mongodb.uri= mongodb+srv://my_user:my_password123@cluster0.ziyxdyy.mongodb.net/ecom_db?retryWrites=true&w=majority
 server.port=${PORT:8080}
 
+logging.file.name=logs/app.log
